# netcore

./: .ccls  .gitignore  CMakeLists.txt  TODO  readme.md
async/: 1.cpp  Connection.h  acceptor.cpp  acceptor.h  basic.hpp  connection.cpp  connection.h  io_context.cpp  io_context.h  makefile  oldtask.h  protocol.cpp  protocol.h  socketMixin.cpp  socketMixin.h  task.cpp  task.h
core/: TODO  __default_config.hpp  client_factory.hpp  connection.cpp  connection.hpp  connection.hpp.bak  define.h  epoll_server.hpp  epoller.h  epoller.hpp  fastCache.hpp  heaptimer.cpp  heaptimer.h  heaptimer.hpp  hs_utils.cpp  hs_utils.h  http_cache.hpp  http_client.hpp  http_parser.hpp  http_router.hpp  http_server.cpp  http_server.hpp  httpresponse.h  main.cpp  makefile  miniRouter.cpp  miniRouter.h  multipart_parser.hpp  multipart_reader.hpp  picohttpparser.h  request.hpp  response.hpp  response_cv.hpp  session.hpp  session_manager.hpp  sha1.hpp  socket.cpp  timer.hpp  uri.hpp  use_asio.hpp  (+9 more)
core/core2/: define.h  main.cpp  timer.hpp  设计.md
core/hs_utils/: download.cpp
core2/: TODO  b1  b2  connection.hpp  connection.hpp.bak  cookie.hpp  define.h  epoll_server.hpp  err  http_cache.hpp  http_parser.hpp  http_router.hpp  http_server.hpp  http_server.hpp.bak  main.cpp  makefile  mime_types.hpp  multipart_parser.hpp  multipart_reader.hpp  picohttpparser.h  request.hpp  response.hpp  response_cv.hpp  session.hpp  session_manager.hpp  upload_file.hpp  url_encode_decode.hpp  utils.hpp
demo/: CMakeLists.txt  multi_server.cpp
docs/: cookie.md  index.md  multipart解析.md  readme.md  session.md  原理.md  如何使用.md  类关系图.md
docs/drawio/: connection的process拆分.drawio  http_router.drawio  parse_multipart.drawio  request.drawio  session.drawio  一次connection的读写转换机制.drawio
docs/picohttpparse/: header  makefile  readme.md  test.c
docs/timer/: 1.cpp  2.cpp  信号定时.md
docs/其它/: post的两编码.md
docs/类/: connection.md  log.md  request.md  response.md  route.md  其它类.md
example/: modern_callback_example.cpp
http/: httpconn.h  httprequest.h  main.cpp  makefile  sqlconnpool.h  webserver.cpp
include/netcore/: __default_config.hpp  acceptor.h  basic.hpp  connection.h  connection.hpp  connection_handle.h  cookie.hpp  core.h  core.hpp  fastCache.hpp  hs_utils.hpp  http_cache.hpp  http_router.hpp  http_server.h  http_server.hpp  io_context.h  mime_types.hpp  multipart_reader.hpp  net_error.hpp  request.hpp  response.hpp  task.h  upload_file.hpp  utils.hpp  websocket.hpp  websocket_manager.h  ws_before_ap.hpp
judgeServer/: client.cpp  client.hpp  judgeServer.cpp  judgeServer.h  judgeServer.hpp  judgeWork.hpp  main.cpp  makefile  message.hpp  readme.md  test_client.cpp
judgeServer/judge/: exec_judge.hpp  judge.cpp  judge.hpp  lang_support.cpp  lang_support.h  problem.hpp
lib/: base64.hpp  blockqueue.h  buffer.cpp  buffer.h  heaptimer.h  hiredis.hpp  hualigs.hpp  lockfree_queue.hpp  log.cpp  log.h  log.hpp  logWrapper.hpp  mail.hpp  smms.hpp  threadpool.hpp  uuid.hpp
lib/captcha/: charinfo.cpp
routes/: routes.h
src/: acceptor.cpp  connection.cpp  core.cpp  http_server.cpp  io_context.cpp
tests/: 1  CMakeLists.txt  client.cpp  connection_timeout.sh  curl_websocket.sh  echoSever.cpp  http_client_test.cpp  makefile  multi_server.cpp  post_multpart_form.sh  query_value.sh  readme.md  sever.cpp  test_get_file.sh  test_multiThread_cookie_session.cpp  test_ws_before_ap.cpp  testlib.hpp
